samples/_failures_safe/1761547316_ed5bf7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95cf7a45.c: In function ‘main’:
./samples/SAFE/__tmp_95cf7a45.c:145:12: error: missing terminating " character
  145 |     printf("Commands: start, data
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_95cf7a45.c:145:5: error: expected expression at end of input
  145 |     printf("Commands: start, data
      |     ^~~~~~
./samples/SAFE/__tmp_95cf7a45.c:145:5: error: expected declaration or statement at end of input
